FISH-6432 finalize to java.lang.ref.Cleaner migration